--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
     <!-- Features -->
@@ -26,6 +28,7 @@
         android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -53,6 +56,11 @@
             </intent-filter>
         </service>
 
+        <receiver android:name=".NetworkReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
 
         <!-- Main Activity -->
         <activity
@@ -60,6 +68,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Chaqmoq">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -67,7 +76,7 @@
         </activity>
 
         <!-- Login Activity -->
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".AuthorizationActivity" />
 
     </application>
 </manifest>
